In pyhesiodfs:   * Change "Debian-Athena Project" to "Debathena Project".

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: debathena-pyhesiodfs
 Section: debathena/net
 Priority: extra
-Maintainer: Debian-Athena Project <debathena@mit.edu>
+Maintainer: Debathena Project <debathena@mit.edu>
 Build-Depends: cdbs, debhelper, quilt, patchutils, config-package-dev, python-dev, python-support
 Standards-Version: 3.7.3
 
