--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: debathena-pyhesiodfs
 Section: debathena/net
 Priority: extra
 Maintainer: Debathena Project <debathena@mit.edu>
-Build-Depends: cdbs, debhelper, quilt, patchutils, config-package-dev, python-dev, python-support
+Build-Depends: cdbs, debhelper, config-package-dev, python-dev, python-support
 Standards-Version: 3.9.3
 
 Package: debathena-pyhesiodfs
