--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,12 @@ Source: debathena-pyhesiodfs
 Section: debathena/net
 Priority: extra
 Maintainer: Debathena Project <debathena@mit.edu>
-Build-Depends: cdbs, debhelper, dh-systemd (>= 1.5) | cdbs (<< 0.4.122~), config-package-dev, python-support, python (>= 2.6~)
+Build-Depends: cdbs, debhelper, dh-systemd (>= 1.5) | cdbs (<< 0.4.122~), config-package-dev, python (>= 2.6.6-3~), python2.7
+X-Python-Version: 2.7
 Standards-Version: 3.9.3
 
 Package: debathena-pyhesiodfs
 Architecture: all
-XB-Python-Version: ${python:Versions}
 Depends: ${misc:Depends},
  ${python:Depends},
  python-fuse,
